<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8DC"
    android:backgroundTint="#FFF8DC"
    android:padding="23dp"
    tools:context=".AddTask">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="326dp"
        android:layout_height="118dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:padding="5dp"
            android:text="@string/task_name"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/midnight_blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/language"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="23dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="326dp"
        android:layout_height="118dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:id="@+id/start_value"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:padding="5dp"
            android:text="@string/initial_progress"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/midnight_blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/start_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/initial_number"
            android:importantForAutofill="no"
            android:inputType="numberSigned|textPersonName"
            android:paddingLeft="23dp"
            android:textColorHint="#757575" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="326dp"
        android:layout_height="118dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/Max_value"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:padding="5dp"
            android:text="@string/max_progress"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/midnight_blue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Max_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/final_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingLeft="23dp"
            android:textColorHint="#757575" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="165dp"
        android:layout_height="84dp"
        android:text="@string/save_task"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#D81B60"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />


</androidx.constraintlayout.widget.ConstraintLayout>