<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8DC"
    android:backgroundTint="#FFF8DC"
    android:padding="23dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/front_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="40dp"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="7dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/border3"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/content"
                    android:layout_width="189dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="13dp"
                    android:text="@string/learn_java"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/midnight_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/outof1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/border2"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/_5_25"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:targetApi="s" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:clickable="false"
                android:foregroundGravity="bottom"
                android:indeterminate="false"
                android:max="25"
                android:progress="5"
                android:progressDrawable="@drawable/custom_seekbar"
                android:thumb="@drawable/thumb" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="280dp"
            android:layout_height="104dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/border3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/content2"
                    android:layout_width="189dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="13dp"
                    android:text="@string/learn_python"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/midnight_blue"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/outof2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border2"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/_10_30"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:targetApi="s" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:foregroundGravity="bottom"
                android:max="30"
                android:padding="15dp"
                android:paddingTop="5dp"
                android:progress="10"
                android:progressDrawable="@drawable/custom_seekbar"
                android:thumb="@drawable/thumb" />

        </LinearLayout>

        <ImageView
            android:id="@+id/add_img"
            android:layout_width="135dp"
            android:layout_height="92dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/todo"
            android:onClick="openNewActivity"
            app:srcCompat="@drawable/add"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/top1"
        android:layout_width="283dp"
        android:layout_height="64dp"
        android:foregroundGravity="center"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/decrease"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:layout_weight="1"
            android:background="@drawable/border3"
            android:contentDescription="@string/decrease"
            android:paddingBottom="23dp"
            app:srcCompat="@drawable/decrease" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border3"
            android:contentDescription="Delete"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:srcCompat="@drawable/delete" />

        <ImageView
            android:id="@+id/increase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border3"
            android:contentDescription="Increase"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:srcCompat="@drawable/increase" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>